[package]
name = "hrmon"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield = "0.19.1"
bluer = { version = "0.17.4", features = ["full"] }
clap = "4.5.41"
env_logger = "0.11.8"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
